--- a/MinerGame/MinerGame.csproj
+++ b/MinerGame/MinerGame.csproj
@@ -131,9 +131,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Pages\LoadingServer.xaml.cs">
+      <DependentUpon>LoadingServer.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Settings.cs" />
-    <Compile Include="UPD\Client.cs" />
-    <Compile Include="UPD\Server.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -151,6 +152,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\EndPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\LoadingServer.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -216,6 +221,10 @@
       <Project>{c4665452-0bdd-4341-b095-6310b4873c9c}</Project>
       <Name>Miner</Name>
     </ProjectReference>
+    <ProjectReference Include="..\UPDController\UPDController.csproj">
+      <Project>{f5054f43-c64c-438e-80d7-1a8112519d47}</Project>
+      <Name>UPDController</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
@@ -228,6 +237,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Extensions.Logging.Abstractions.6.0.0\build\Microsoft.Extensions.Logging.Abstractions.targets" Condition="Exists('..\packages\Microsoft.Extensions.Logging.Abstractions.6.0.0\build\Microsoft.Extensions.Logging.Abstractions.targets')" />
