Фикс повторой привязки к адрес:порт. Возможность менять свой ip и порт.

--- a/MinerGame/App.config
+++ b/MinerGame/App.config
@@ -20,6 +20,15 @@
             <setting name="SoundsVolume" serializeAs="String">
                 <value>0.5</value>
             </setting>
+            <setting name="IP" serializeAs="String">
+                <value>127.0.0.1</value>
+            </setting>
+            <setting name="PORT" serializeAs="String">
+                <value>7777</value>
+            </setting>
+            <setting name="FreePort" serializeAs="String">
+                <value>False</value>
+            </setting>
         </MinerGame.Properties.Settings>
         <MinerGame.Settings>
             <setting name="SoundsVolume" serializeAs="String">
