Фикс вечно подключенных сокетов.

--- a/MinerGame/App.config
+++ b/MinerGame/App.config
@@ -27,7 +27,7 @@
                 <value>7777</value>
             </setting>
             <setting name="FreePort" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
         </MinerGame.Properties.Settings>
         <MinerGame.Settings>
