--- a/MinerGame/Properties/Settings.settings
+++ b/MinerGame/Properties/Settings.settings
@@ -15,7 +15,7 @@
       <Value Profile="(Default)">7777</Value>
     </Setting>
     <Setting Name="FreePort" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
